
Replaced the last deprecated split from html_functions and checkEntry.

Import student data now inisists on a postcode for a valid
address. Can also use either upn, former upn or sid to identify
students.

Working on new functionality in Register for general notices including two new db
tables.

Improved the MarkBook's column_export, now formats percentages and raw values in
Excel correctly.


Version ClaSS-0.9.41 release (2011/06/7)
-----------------------------------------

Navigating to next student or next subject component, instead of
returning to the mark table, added as an option to new_edit_reports in
MarkBook.

Reworked the chekRadoiIndicator js to add event handler to containing div.

Added the uncheck option for report categories.

Fixed the link to published reports from InfoBook.

Added forename as a guardian search option.

Cursor to a pointer for div.row


Version ClaSS-0.9.40 release (2011/05/31)
-----------------------------------------

Start and end dates added to the community_group page to allow
listing/exporting of group members in the defined date window.

New db table for attendance_booking. Apply the patch!

New set of attendance scripts to allow advance schedule of absences
based on the same method as transport booking.

Added a set of extra fields to the users table. Enabled in new staff import.

Changed file_import_csv options to use semi-colon and NOT commas
becauses this seems to be the default exported from spreadsheets these
days.

Added at maximum character warning to the comment writer. Fixed
upating the character limit in new report.

Fixed the booked attendance which was not distinguishing between days
when retrieving.

Added column to admissions report for next year's total projected leavers.

Fixed update user and removed admin groups from responsables.

Fix to listing leavers so that late leavers (LL) are not missed.

Added a postal address to staff details.

Fix to the search by school startdate.
